# taiko_bot_qq

./: .env  .env.example  .gitignore  CLEANUP_JOB_CONFIGURATION.md  DOCKER_SETUP.md  E2E_TEST_GUIDE.md  EXTERNAL_SERVICES_DEPLOYMENT.md  HOW_TO_SWITCH_MODEL.md  INIT_MEME_KNOWLEDGE.md  LANGBOT_API_SETUP.md  LANGBOT_CONFIGURATION.md  LANGBOT_FORMAT_FIX.md  LANGBOT_RESPONSE_DEBUG.md  LLM_MODEL_RECOMMENDATION.md  LLM_SETUP_GUIDE.md  MANUAL_TESTING.md  MANUAL_TESTING_GUIDE.md  MESSAGE_TYPE_DETECTION.md  MIKA_PERSONALITY_CUSTOMIZATION.md  MIKA_PERSONALITY_UPDATE_SUMMARY.md  MIKA_PERSONALITY_UPDATE_V2.md  MIKA_PERSONALITY_UPDATE_V3.md  MIKA_PERSONALITY_UPDATE_V4.md  MIKA_PERSONALITY_UPDATE_V5.md  MIKA_PERSONALITY_UPDATE_V6.md  MIKA_PERSONALITY_UPDATE_V7.md  MIKA_PERSONALITY_UPDATE_V8.md  MIKA_PERSONALITY_UPDATE_V9.md  MODEL_SWITCH_COMPLETED.md  NGROK_QQ_TEST_GUIDE.md  PHASE10_IMPLEMENTATION_SUMMARY.md  PHASE7_IMPLEMENTATION_SUMMARY.md  PHASE7_TEST_GUIDE.md  PLAN_IMPACT_ANALYSIS.md  PRIVATE_VS_GROUP_BEHAVIOR.md  QUICK_FIX.md  QUICK_START.md  QUICK_TEST_GUIDE.md  README.md  RESTART_SERVICE_FOR_PROMPT_UPDATE.md  (+13 more)
data/: database.json  song_difficulty_database.json
docker/: Dockerfile.backend  Dockerfile.temporal
scripts/: check_langbot_config.py  check_llm_config.ps1  check_services.ps1  check_worker.ps1  cleanup_old_conversations.py  diagnose_group_message.py  diagnose_workflow.ps1  e2e_test.ps1  e2e_test_simple.py  init_database.py  init_meme_knowledge.py  parse_difficulty_table.py  schedule_cleanup_workflow.py  seed_songs.py  start_all.ps1  start_services.ps1  stop_all.ps1  stop_services.ps1  test_api_key.py  test_basic.py  test_docker_deployment.sh  test_image_manual.py  test_intent_manual.py  test_langbot_api.py  test_langbot_integration.py  test_llm_api.py  test_quick_manual.py  test_song_query.py  test_webhook.py  test_webhook_simple.py  verify_api_key.ps1
src/: __init__.py  config.py  mika_profile.py  prompts.py
tests/: __init__.py  conftest.py
スコア難易度表 -太鼓の達人 譜面とかデータベース-_files/: ads.html  aframe.html  button.css  color.css  css2  css2(1)  dan_i_compare.css  dan_i_graph.css  dynamic.css  error.css  f(1).txt  favorite.css  js  (+12 more)
(+76 files in other folders)
